# rabbit_mq_client

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose-rabbit.yml  pyproject.toml  tox.ini
.github/workflows/: publish_to_pypi.yml  run_tests.yml
src/rabbit_mq_client/core/: base_connect.py  consumer.py  producer.py
src/rabbitmq_clients/: __init__.py
src/rabbitmq_clients/core/: __init__.py  base_connect.py  consumer.py  dto.py  exceptions.py  handlers.py  producer.py  types.py
tests/: conftest.py  fixtures.py  test_callback_handler.py  test_consumer.py
