[tool.poetry]
name = "rabbitmq-clients"
version = "0.1.6"
description = "High level interfaces for work with RabbitMQ."
authors = ["deskent <battenetciz@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = 'https://github.com/Deskent/rabbit_mq_client'

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.4.10"
flake8 = "^7.1.0"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
